--- a/README.org
+++ b/README.org
@@ -5,7 +5,7 @@
 
 myapp is a toy application used to test code modifications to Artanis
 
-## Modify channels.scm
+# Modify channels.scm
 
 nano ~/.config/guix/channels.scm
 
@@ -29,14 +29,16 @@ add it to =~/.config/guix/channels.scm=:
 
 Then run =guix pull=.
 
-## Install
+# Install
 
 =guix package -i myapp=
+
 =init-myapp.sh=
 
-## Launch and Navigate 
+# Launch and Navigate 
 
 =start-myapp.sh=
+
 go to: [[http://127.0.0.1:3000/pages/page1][http://127.0.0.1:3000/pages/page1]]
 
 ## Output 
